* do not insert break opportunities into bare URL with `nobreak` role

Improvements::

* process `pre-wrap` role in text formatter
* drop support for the unmaintained payment font (`pf`) for use in font-based icons
* refactor formatted text transform to simplify how inner space is collapsed; verify only inner hard breaks are preserved

Bug Fixes::

* correctly map all icons from FontAwesome 4 (#2373)
* resolve remote image in document title or section title with autogenerated ID
* keep caret between items in menu macro with previous item if items wrap
* don't include children of section with empty title in TOC
* don't include children of section with empty title in outline
* only load Treetop runtime so it does not overload `require` method
* fix collation order of index terms that differ only in case
* don't crash if page background image value is empty (interpret as "none")
* prevent special character substitution from interfering with callouts in plain verbatim block (#2390)
* remove deprecated, undocumented `svg-font-family` theme key (the correct key is `svg-fallback-font-family`)

== 2.3.9 (2023-06-28) - @mojavelinux

Bug Fixes::

* correctly align block image in raster format in column when align is right or center and page columns are enabled (#2433)
* honor table caption end placement (`table-caption-end` theme key) when `unbreakable` (or `breakable`) option is set on table (#2434)

=== Details

{url-repo}/releases/tag/v2.3.9[git tag] | {url-repo}/compare/v2.3.8\...v2.3.9[full diff]

== 2.3.8 (2023-06-25) - @mojavelinux

Improvements::

* do not attempt to fit inline image in normal table cell to computed height of cell (#2428)
* support `fit=none` attribute on inline image to prevent image from being scaled down to fit available height (#2428)

Bug Fixes::

* remove null character enclosed in XML tag when sanitizing text; fixes invisible text in outline when heading contains index term (#2430)