@@ -40,6 +40,7 @@ Improvements::
 
 Bug Fixes::
 
+* show dot leaders in TOC entry if toclevels is increased for a given section (#2441)
 * correctly map all icons from FontAwesome 4 (#2373)
 * resolve remote image in document title or section title with autogenerated ID
 * keep caret between items in menu macro with previous item if items wrap
